// AUTOMATICALLY GENERATED BY SimpleRPC

syntax = "proto3";
import "google/protobuf/empty.proto";
package ProductAdditionalImagespkg;

service ProductAdditionalImages {
    rpc add_images(add_imagesRequest) returns (add_imagesResponce) {}
    rpc get_images_by_productId(get_images_by_productIdRequest) returns (get_images_by_productIdResponce) {}
}

message get_images_by_productIdResponce {
    repeated AdditionalImagesDTO AdditionalImagesDTOArray = 1;
}
message add_imagesRequest {
    repeated string imageUrls = 1;
    int64 productId = 2;
}
message get_images_by_productIdRequest {
    int64 productId = 1;
}
message add_imagesResponce {
}
message AdditionalImagesDTO {
    int64 id = 1;
    string imageUrl = 2;
    int64 productId = 3;
}
